menifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-query-deployment
  namespace: axion-app
spec:
  selector:
    matchLabels:
      app: telemetry-query-deployment
  template:
    metadata:
      labels:
        app: telemetry-query-deployment
    spec:
      containers:
      - name: telemetry-query-deployment
        image: ghcr.io/contactanamika55/axion-telemetry-query-service:18e6213
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
